--- a/about.html
+++ b/about.html
@@ -771,7 +771,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-custom navbar-dark sticky-top">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="faazmiar_news.html">
+      <a class="navbar-brand fw-bold" href="index.html">
         <i class="fas fa-gas-pump me-2"></i>FAAZMIAR PETROLEUM
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
@@ -781,7 +781,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="faazmiar_news.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -1052,7 +1052,7 @@
         <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
           <h5 class="mb-4">Quick Links</h5>
           <ul class="list-unstyled">
-            <li class="mb-2"><a href="faazmiar_news.html" class="text-decoration-none">Home</a></li>
+            <li class="mb-2"><a href="index.html" class="text-decoration-none">Home</a></li>
             <li class="mb-2"><a href="faazmiar_news.html#latest" class="text-decoration-none">Latest News</a></li>
             <li class="mb-2"><a href="about.html" class="text-decoration-none">About Us</a></li>
             <li class="mb-2"><a href="contact.html" class="text-decoration-none">Contact</a></li>
@@ -1171,4 +1171,5 @@
     });
   </script>
 </body>
+
 </html>
