--- a/index.html
+++ b/index.html
@@ -396,6 +396,9 @@
       animation: none;
       opacity: 0;
     }
+    .hero .btn:first-child {
+  margin-right: 30px; /* Adds space to the right of "Read News" button */
+}
     
     /* Animated Background Sections */
     .animated-bg-section {
