--- a/index.html
+++ b/index.html
@@ -1795,7 +1795,7 @@
       <h1 class="fw-bold mb-4">FAAZMIAR PETROLEUM</h1>
       <p class="lead mb-5">Stay updated with the latest news and industry insights from the world of oil and gas</p>
       <a href="#latest" class="btn btn-lg">Read News</a>
-      <a href="#lifecycle" class="btn btn-lg">Our Process</a>
+      <a href="#lifecycle" class="btn btn-lg">Our Product</a>
     </div>
   </header>
 
